Fix Scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,7 @@ body {
   margin-top: 13px;
   margin-bottom: 13px;
 }
+
+.no-scroll {
+  overflow: hidden !important;
+}
